# posixipc_data_transport

./: README.md  ipc_transport.py  main.py  pyproject.toml
examples/cpp/: test_cpp_read.cpp  test_cpp_write.cpp
examples/python/: test_cpp_read.py  test_cpp_write.py
include/: posixipc_data_transport.hpp
